[package]
name = "rs"
version = "0.1.0"
authors = ["martinbeckmann"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
calamine = "0.16.1"
chrono = "0.4.13"
regex = "1"
openssl = { version = "0.10", features = ["vendored"] }